<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Energize</string>

    <string name="pref_title_start_on_boot">Start on boot</string>
    <string name="pref_title_show_notification_bar">Status bar icon</string>
    
    <string name="pref_title_theme">Theme</string>
    <string name="pref_summary_theme">Using \""%1$s\" as theme</string>
    
    <string name="pref_title_change_batteryestimation">Battery estimation method</string>
    <string name="pref_summary_change_batteryestimation">Method: %1$s</string>
    
    <string name="pref_title_about_whatsnew">What\'s new?</string>
    
    <string name="pref_title_clearstatsdb">Clear statistics database</string>
    <string name="pref_summary_clearstatsdb">Clears the recorded battery events</string>
    
    <string name="pref_about_title_showlicense">Show app license</string>
    <string name="pref_about_summary_showlicense">Show the application license</string>
    
    <string name="pref_about_title_icon_showlicense">Show addional licenses</string>
    <string name="pref_about_summary_icon_showlicense">Icon and 3rd party licences</string>
    
    <string name="notification_title_charges">Battery charges</string>
    <string name="notification_title_discharges">Battery discharges</string>
    <string name="notification_text_estimate">%1$d hour(s) and %2$d minute(s) remaining</string>
    <string name="notification_text_estimate_na">Estimation currently not available</string>
    
    <string name="graph_title_batterystatistics">Battery charging statistics</string>
    
    <string name="textview_label_current_chargingstate">Current charging state:</string>
    <string name="textview_label_current_charginglvl">Current charging level of the battery:</string>
    
    <string name="dialog_title_whatsnew">What\'s new?</string>
    <string name="dialog_title_appiconlicense">Addional licenses</string>
    <string name="dialog_text_appiconlicense">Portions of the application icon (the Android robot) are modifications based on work created and shared by the Android Open Source Project and used according to terms described in the Creative Commons 2.5 Attribution License.\n\nThe battery icon used in the application icon was designed by the GNOME High contrast icons/authors and is licensed under the terms of the GNU Lesser General Public License as published by the Free Software Foundation; either version 2.1 of the License, or (at your option) any later version.\n\nGraphView library (for drawing all charts) was developed by Jonas Gehring.</string>

    <string name="dialog_title_cleardb_successfull">Database cleared</string>
    <string name="dialog_text_cleardb_successfull">The battery statistics were deleted and it will talke some time until the charging estimation will work again.</string>
    
    <string-array name="pref_list_theme_names">
        <item>Dark theme</item>
        <item>Light theme</item>
    </string-array>

    <string-array name="pref_list_batteryestimationmethod_names">
        <item>Last change period (inaccurate)</item>
    </string-array>

    <string name="app_version">Application version</string>
</resources>
